syntax = "proto3";
package demo.api.user.v1;
option go_package = "github.com/walrusyu/gocamp007/demo/api/user/v1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";

service UserService {
  rpc Get(GetRequest) returns (User);
  rpc Update(UpdateRequest) returns(User);
}

message User {
  google.protobuf.Int32Value id = 1;
  string name = 2;
  int32  age = 3;

  message Address {
    google.protobuf.Int32Value id = 1;
    string province = 2;
    string city = 3;
    string street = 4;
  }

  Address address = 4;
}


message GetRequest {
  google.protobuf.Int32Value id = 1;
}

message UpdateRequest {
  User user = 1;
  google.protobuf.FieldMask mask = 2;
}